--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CategoryActivity"></activity>
+        <activity android:name=".MyTransactionActivity"></activity>
+        <activity android:name=".MyOrdersActivity" />
+        <activity android:name=".ContactUsActivity" />
+        <activity android:name=".WebViewActivity" />
+        <activity android:name=".AddressActivity" />
+        <activity android:name=".CartActivity" />
+        <activity
+            android:name=".ProductList"
+            android:label="@string/title_activity_product_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".CategoryActivity" />
         <activity android:name=".PincodeActivity" />
         <activity android:name=".SplashScreen">
             <intent-filter>
