--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dibomart.dibomart">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,15 +8,21 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MyTransactionActivity"></activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity android:name=".SearchActivity"
+            android:windowSoftInputMode="stateAlwaysVisible"/>
+        <activity android:name=".ProductDetailsActivity" />
+        <activity android:name=".MyTransactionActivity" />
         <activity android:name=".MyOrdersActivity" />
         <activity android:name=".ContactUsActivity" />
         <activity android:name=".WebViewActivity" />
+        <activity android:name=".PaymentWebViewActivity" />
         <activity android:name=".AddressActivity" />
         <activity android:name=".CartActivity" />
         <activity
