--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".OrderSuccessActivity"></activity>
+        <activity android:name=".AllCategories"></activity>
+        <activity android:name=".OrderSuccessActivity" />
         <activity
             android:name=".OrderConfirmActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ShippingMethod" />
         <activity android:name=".AddAdress" />
         <activity
