--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 30
@@ -8,8 +9,8 @@ android {
         applicationId "com.dibomart.dibomart"
         minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -21,20 +22,20 @@ android {
         }
     }
 
-    //    signingConfigs {
-//        release {
-//            storeFile file('/Users/shrawan03/StudioProjects/Dibomart/app/Dibomart.jks')
-//            storePassword 'Dibo@8902'
-//            keyAlias = 'key'
-//            keyPassword 'Dibo@8902'
+        signingConfigs {
+        release {
+            storeFile file('/Users/shrawan03/StudioProjects/Dibomart/app/Dibomart.jks')
+            storePassword 'Dibo@8902'
+            keyAlias = 'key'
+            keyPassword 'Dibo@8902'
 //            if (project.hasProperty("/Users/shrawan03/StudioProjects/Dibomart/app")) {
 //                storeFile file(RELEASE_STORE_FILE)
 //                storePassword RELEASE_STORE_PASSWORD
 //                keyAlias RELEASE_KEY_ALIAS
 //                keyPassword RELEASE_KEY_PASSWORD
 //            }
-//        }
-//    }
+        }
+    }
 }
 
 dependencies {
@@ -56,7 +57,9 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.4.0'
     implementation 'me.zhanghai.android.materialprogressbar:library:1.4.2'
 
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-crashlytics:17.2.1'
 
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
