--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
-        android:debuggable="true"
+        android:name=".app.ApplicationClass"
         android:allowBackup="true"
         android:icon="@drawable/logo_white"
         android:label="@string/app_name"
@@ -15,10 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:targetApi="m"
-        tools:ignore="HardcodedDebugMode">
-
-        <activity android:name=".ReturnDetailsActivity"/>
+        tools:ignore="HardcodedDebugMode"
+        tools:targetApi="m">
+        <activity android:name=".AddressSelectionActivity"></activity>
+        <activity android:name=".ReturnDetailsActivity" />
         <activity android:name=".ReturnHistoryActivity" />
         <activity android:name=".OrderDetailActivity" />
         <activity android:name=".ReturnActivity" />
